--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="w-full h-full flex flex-col items-center">
+	<body data-sveltekit-preload-data="hover" class="w-full min-h-full flex justify-center">
 		<script>
 			const theme = localStorage.getItem('theme') || 'dark';
 			document.documentElement.dataset.theme = theme;
